--- a/addnewuser.html
+++ b/addnewuser.html
@@ -142,6 +142,11 @@
         </a>
       </li><!-- End Tables Nav -->
       <li class="nav-item">
+        <a class="nav-link collapsed"  href="chat.html">
+          <i class="bi bi-chat"></i><span>Inbox</span>
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#components-navs" data-bs-toggle="collapse" href="#" style="background-color: #f6f9ff !important; color: #6575f4 !important;">
           <i class="bi bi-menu-button-wide"style="color: #6575f4 !important;"></i><span>Users</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
