--- a/dashboard.html
+++ b/dashboard.html
@@ -138,6 +138,11 @@
         </a>
       </li><!-- End Tables Nav -->
       <li class="nav-item">
+        <a class="nav-link collapsed"  href="chat.html">
+          <i class="bi bi-chat"></i><span>Inbox</span>
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#components-navs" data-bs-toggle="collapse" href="#">
           <i class="bi bi-menu-button-wide"></i><span>Users</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
