--- a/bookedroomsinfo.html
+++ b/bookedroomsinfo.html
@@ -224,6 +224,8 @@
                        <td style="font-size: 15px !important;">Customer_Phone</td>
                        <td style="font-size: 15px !important;">Payment_Method</td>
                        <td style="font-size: 15px !important;">Total_Price</td>
+                       <td style="font-size: 15px !important;">Fromdate</td>
+                       <td style="font-size: 15px !important;">Todate</td>
                        <td style="font-size: 15px !important;">Booking_Status</td>
                        <td style="font-size: 15px !important;">Action</td>
                     </tr>
